# Paddle-Puffle

./: .gitignore  configure.ac  paddle.c
data/: Makefile.am
data/desktop/: paddle.desktop
etc/: Info.plist.in  Makefile.am  paddle.icns
po/: POTFILES.in  de.po  es.po  fr.po  paddle-puffle.pot
src/: Makefile.am  draw-text.c  draw-text.h  paddle.c  paddle.rc  path.c  path.h
