gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/fail-0.png \
	images/fail-1.png \
	images/new-0.png \
	images/new-1.png \
	images/normal.png \
	images/paddle-1.png \
	images/paddle-2.png \
	images/paddle-3.png \
	images/paddle-4.png \
	images/puffle-blue-1.png \
	images/puffle-blue-2.png \
	images/puffle-blue-3.png \
	images/puffle-blue-4.png \
	images/puffle-blue-5.png \
	images/puffle-blue-6.png \
	images/puffle-blue-7.png \
	images/puffle-blue-8.png \
	images/title.png \
	music/carnie.ogg \
	sounds/oldboing.wav \
	sounds/overtodown1.wav \
	sounds/overtodown2.wav \
	sounds/squeak1.wav \
	sounds/squeak2.wav \
	sounds/squeak3.wav
