gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/fail-0.png \
	images/fail-1.png \
	images/new-0.png \
	images/new-1.png \
	images/normal.png \
	images/boton-close-over.png \
	images/boton-close-up.png \
	images/boton-close-down.png \
	images/boton-ui-up.png \
	images/boton-ui-over.png \
	images/boton-ui-down.png \
	images/paddle-1.png \
	images/paddle-2.png \
	images/paddle-3.png \
	images/paddle-4.png \
	images/puffle-blue-1.png \
	images/puffle-blue-2.png \
	images/puffle-blue-3.png \
	images/puffle-blue-4.png \
	images/puffle-blue-5.png \
	images/puffle-blue-6.png \
	images/puffle-blue-7.png \
	images/puffle-blue-8.png \
	images/puffle-pink-1.png \
	images/puffle-pink-2.png \
	images/puffle-pink-3.png \
	images/puffle-pink-4.png \
	images/puffle-pink-5.png \
	images/puffle-pink-6.png \
	images/puffle-pink-7.png \
	images/puffle-pink-8.png \
	images/puffle-black-1.png \
	images/puffle-black-2.png \
	images/puffle-black-3.png \
	images/puffle-black-4.png \
	images/puffle-black-5.png \
	images/puffle-black-6.png \
	images/puffle-black-7.png \
	images/puffle-black-8.png \
	images/puffle-green-1.png \
	images/puffle-green-2.png \
	images/puffle-green-3.png \
	images/puffle-green-4.png \
	images/puffle-green-5.png \
	images/puffle-green-6.png \
	images/puffle-green-7.png \
	images/puffle-green-8.png \
	images/puffle-purple-1.png \
	images/puffle-purple-2.png \
	images/puffle-purple-3.png \
	images/puffle-purple-4.png \
	images/puffle-purple-5.png \
	images/puffle-purple-6.png \
	images/puffle-purple-7.png \
	images/puffle-purple-8.png \
	images/puffle-red-1.png \
	images/puffle-red-2.png \
	images/puffle-red-3.png \
	images/puffle-red-4.png \
	images/puffle-red-5.png \
	images/puffle-red-6.png \
	images/puffle-red-7.png \
	images/puffle-red-8.png \
	images/puffle-yellow-1.png \
	images/puffle-yellow-2.png \
	images/puffle-yellow-3.png \
	images/puffle-yellow-4.png \
	images/puffle-yellow-5.png \
	images/puffle-yellow-6.png \
	images/puffle-yellow-7.png \
	images/puffle-yellow-8.png \
	images/puffle-white-1.png \
	images/puffle-white-2.png \
	images/puffle-white-3.png \
	images/puffle-white-4.png \
	images/puffle-white-5.png \
	images/puffle-white-6.png \
	images/puffle-white-7.png \
	images/puffle-white-8.png \
	images/puffle-orange-1.png \
	images/puffle-orange-2.png \
	images/puffle-orange-3.png \
	images/puffle-orange-4.png \
	images/puffle-orange-5.png \
	images/puffle-orange-6.png \
	images/puffle-orange-7.png \
	images/puffle-orange-8.png \
	images/puffle-brown-1.png \
	images/puffle-brown-2.png \
	images/puffle-brown-3.png \
	images/puffle-brown-4.png \
	images/puffle-brown-5.png \
	images/puffle-brown-6.png \
	images/puffle-brown-7.png \
	images/puffle-brown-8.png \
	images/title.png \
	images/title-opening.png \
	images/note.png \
	ccfacefront.ttf \
	music/carnie.ogg \
	sounds/oldboing.wav \
	sounds/overtodown1.wav \
	sounds/overtodown2.wav \
	sounds/squeak1.wav \
	sounds/squeak2.wav \
	sounds/squeak3.wav
